[NG] Fixes signpost issue affectingn datagrid row height - Adds detection to DatagridCell for Signpost's - Adds style to ensure Signpost doesn't change the height of the row - Adds transparent bg to .signpost-content and moves -white to .signpost-flex-wrap - Adds DatagridCell spec for DatagridSignpost style class use cases - closes #1098

--- a/src/clarity-angular/popover/signpost/_signposts.clarity.scss
+++ b/src/clarity-angular/popover/signpost/_signposts.clarity.scss
@@ -374,7 +374,7 @@
         }
 
         &-content {
-            background-color: $clr-white;
+            background-color: transparent;
             min-width: 216px;
             max-width: 360px;
             min-height: 84px;
@@ -385,7 +385,7 @@
             .signpost-flex-wrap {
                 border: 1px solid $clr-dark-midtone-gray;
                 border-radius: 3px;
-                //overflow-y: hidden;
+                background-color: $clr-white;
                 display: flex;
                 flex-direction: column;
                 z-index: map-get($clr-layers, tooltips);
